--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,8 @@ services:
   - key: PORT
     sync: false
   region: oregon
-  buildCommand: npm install --force
+  buildCommand: npm run build
   startCommand: npm run start
+  port: 3000 # Change to your app's port if different
   rootDir: app
 version: "1"
