--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,8 @@
-# Exported from Render on 2024-07-14T17:48:44Z
 services:
-- type: web
-  name: ai-generator-Tiwari
-  runtime: node
-  repo: https://github.com/shivamtiwari-ui/ai-generator-Tiwari
-  plan: free
-  envVars:
-  - key: PORT
-    sync: false
-  region: oregon
-  buildCommand: npm run build
-  startCommand: npm run start
-  port: 3000 # Change to your app's port if different
-  rootDir: app
-version: "1"
+  - type: web
+    name: my-app
+    env: node
+    buildCommand: "npm install && npm run build"
+    startCommand: "npm start"
+    plan: "starter"
+    port: 3000  # Ensure this matches your app's default port
